--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,17 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  user_id: MyString
-  password_hash: MyString
-  password_salt: MyString
-  password_reset: MyString
-  user_type: 1
-  last_login: 2012-07-11 21:15:25
+normal:
+  id: 18
+  email: test@testmctest.com
+  password_digest: ergergergreg
+  registration_code: BBB
 
-two:
-  user_id: MyString
-  password_hash: MyString
-  password_salt: MyString
-  password_reset: MyString
-  user_type: 1
-  last_login: 2012-07-11 21:15:25
+another:
+  id: 22
+  email: hello@test.com
+  password_digest: egergrg
+  registration_code: XXX
